After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 671846 - Renamed items are not updated until reopen
Renamed items are not updated until reopen
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
3.3.x
Other Linux
: Normal minor
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2012-03-11 21:02 UTC by Mantas Mikulėnas (grawity)
Modified: 2012-03-14 21:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mantas Mikulėnas (grawity) 2012-03-11 21:02:01 UTC
With the new Seahorse, if I rename a password or other item, the changes are not displayed -- both the list and the properties dialog still show the old name. The only way to refresh is by closing and re-opening Seahorse.

seahorse 3.3.5-1
gnome-keyring 3.3.91-1
libgnome-keyring 3.3.91-1
Arch Linux [gnome-unstable]
Comment 1 Stef Walter 2012-03-14 21:03:37 UTC
Thanks. Fixed:


commit 48ad29bfa467ce671dc42ce379e80af9dbfd75b8
Author: Stef Walter <stefw@gnome.org>
Date:   Wed Mar 14 22:03:05 2012 +0100

    Fix problem where label isn't changed when edited
    
    https://bugzilla.gnome.org/show_bug.cgi?id=671846