Fix problem where label isn't changed when edited

https://bugzilla.gnome.org/show_bug.cgi?id=671846